--- a/src/styles.css
+++ b/src/styles.css
@@ -33,10 +33,12 @@ header {
 main {
     display: flex;
     justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 
 main p {
-    width: 70%;
+    width: 80%;
 }
 
 .item {
@@ -45,4 +47,8 @@ main p {
     margin: 20px;
     padding: 10px;
     padding-right: 40px;
+}
+
+.items-container {
+    display: flex;
 }
